fix: How to align several elements in vertical way (besides the already worked horizontal cases)

--- a/3-nexter/sass/_header.scss
+++ b/3-nexter/sass/_header.scss
@@ -7,4 +7,57 @@
     - On this particular case, you can see that the header will be starting at sidebar-end and to the end of the sixth column (which has been created in the repeat code). This is the way repeated columns can be called in the grid layout
   */
   grid-column: full-start / col-end 6;
+  background-image: linear-gradient(
+      rgba($color-secondary, 0.93),
+      rgba($color-secondary, 0.93)
+    ),
+    url('../img/hero.jpeg');
+  padding: 8rem;
+  padding-top: 4rem;
+  background-size: cover;
+  background-position: center;
+  display: grid;
+  grid-template-rows: 1fr min-content 6rem 1fr;
+  grid-template-columns: max-content;
+  justify-content: center;
+  row-gap: 1.5rem;
+
+  &__logo {
+    height: 3rem;
+    justify-self: center;
+  }
+
+  &__btn {
+    place-self: start;
+    justify-self: start;
+  }
+
+  &__seenon-text {
+    display: grid;
+    font-size: 1.5rem;
+    color: $color-grey-light-2;
+    grid-template-columns: 1fr max-content 1fr;
+    column-gap: 1.5rem;
+    align-items: center;
+
+    &::before,
+    &::after {
+      content: '';
+      height: 1px;
+      display: block;
+      background-color: currentColor;
+    }
+  }
+
+  &__seeon-logos {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 3rem;
+    justify-items: center;
+
+    img {
+      height: 2.5rem;
+      filter: brightness(70%);
+    }
+  }
 }
