--- a/3-nexter/sass/_realtors.scss
+++ b/3-nexter/sass/_realtors.scss
@@ -6,4 +6,29 @@
     Doing it like this makes code more readable to new users (having the name asignations at hand)
   */
   grid-column: col-start 7 / full-end;
+  padding: 3rem;
+  display: grid;
+  place-content: center;
+  align-content: center;
+  justify-items: center;
+  row-gap: 2rem;
+
+  &__list {
+    display: grid;
+    grid-template-columns: min-content max-content;
+    gap: 2rem 5vh;
+    align-items: center;
+  }
+
+  &__img {
+    width: 7rem;
+    border-radius: 50%;
+    display: block;
+  }
+
+  &__sold {
+    text-transform: uppercase;
+    color: $color-grey-light-2;
+    margin-top: -3px;
+  }
 }
